--- a/templates/register.html
+++ b/templates/register.html
@@ -1,165 +1,219 @@
 {% load static %}
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-   
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
- 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/fbfe7ccd16.js" crossorigin="anonymous"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous" />
+    <script
+      src="https://kit.fontawesome.com/fbfe7ccd16.js"
+      crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-    <link rel="stylesheet" href="{% static 'style/myform.css' %}">
+    <link rel="stylesheet" href="{% static 'style/myform.css' %}" />
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <title>Registration </title>
-
-
+    <title>Registration</title>
   </head>
   <body>
-
-
-   
-       
-            <div class="card-body" style="background-color: #009688;">
-                
-                    
-                  
-                   
-                    <div class="container message  ">
-                    
-                    <div class="form"> 
-                    <form action=" " id="registration-form" method="post" autocomplete="off">
-                      {% csrf_token %}
-                      <h1>Create Account</h1>
-                        <div class="card-text">
-                            <label for="" class="form-label">Email Address:</label>
-                            <input type="email"  name="email" class="form-control" style="padding-left: 50px;" id="email" placeholder="Enter Emaill here " required/>
-                            <div class="icon"><i class="fa-regular fa-envelope"></i></div>
-                        </div>
-
-
-                        <div class="card-text">
-                            <label for="" class="form-label">Whatsapp Number:</label>
-                            <input type="tel" minlength="10" maxlength="11" style="padding-left: 50px;" name="phone" id="phone" class="form-control" placeholder="Enter Whatsapp No " required/>
-                            <div class="whatsapp"><i class="fa-brands fa-whatsapp"></i></div>
-
-                        </div>
-
-
-                        <div class="card-text">
-                          <label for="" class="form-label">Username:</label>
-                          <input type="text" name="username" style="padding-left: 50px;" id="username" style="padding-left: 50px;" class="form-control" placeholder="Enter Username " required/>
-                          <div class="user"><i class="fa-solid fa-user-lock"></i></div>
-                        </div>
-
-                        <div class="card-text">
-                          <label for="" class="form-label">Enter Password:</label>
-                          <div class="" style="position: relative;">
-                            <input type="password" name="password" style="padding-left: 50px;" id="password" class="form-control" placeholder="password " required/>
-                            <div class="icon"><i class="fa-solid fa-lock" style="position: absolute; top: 0px; left: 0px;"></i></div>
-                          </div>
-                        </div>
-
-
-                        <div class="card-text">
-                          <label for="" class="form-label">Confirm Password:</label>
-                          <div style="position: relative;">
-                            <input type="password" name="password2" style="padding-left: 50px;" id="password2" class="form-control" placeholder="password " required/>
-                            <div class="icon"><i class="fa-solid fa-lock" style="position: absolute; top: 0px; left: 0px;"></i></div>
-                          </div>
-
-                        </div>
-
-
-                      
-
-                        <div class="btn d-grid mt-3">
-                          <button type="submit" value="Proceed" class="btn btn-primary  ">
-                            Proceed
-                          <div class="icon-btn">
-                            <i class="fa-solid fa-forward"></i>
-                          </div>
-                          </button>
-                        </div>
-                    </form>
-
+    <div class="card-body" style="background-color: #009688">
+      <img src="" />
+      <div class="container message">
+        <div class="form">
+          <form
+            action=" "
+            id="registration-form"
+            method="post"
+            autocomplete="off">
+            {% csrf_token %}
+            <h1>Create Account</h1>
+            <div class="card-text">
+              <div class="card-text">
+                <label for="" class="form-label">Email Address:</label>
+                <div class="" style="position: relative">
+                  <input
+                    type="email"
+                    name="email"
+                    style="padding-left: 50px"
+                    id="password"
+                    class="form-control"
+                    placeholder="Enter Emaill here "
+                    required />
+                  <div class="icon">
+                    <i
+                      class="fa-regular fa-envelope"
+                      style="position: absolute; top: 0px; left: 0px"></i>
                   </div>
                 </div>
+              </div>
 
+              <div class="card-text">
+                <label for="" class="form-label">Whatsapp Number:</label>
+                <div class="" style="position: relative">
+                  <input
+                    type="tel"
+                    minlength="10"
+                    maxlength="11"
+                    name="phone"
+                    style="padding-left: 50px"
+                    id="phone"
+                    class="form-control"
+                    placeholder="Enter Whatsapp No "
+                    required />
+                  <div class="icon">
+                    <i
+                      class="fa-brands fa-whatsapp"
+                      style="position: absolute; top: 0px; left: 0px"></i>
+                  </div>
+                </div>
+              </div>
 
-      
- 
+              <div class="card-text">
+                <label for="" class="form-label">Username:</label>
+                <div class="" style="position: relative">
+                  <input
+                    type="text"
+                    name="username"
+                    style="padding-left: 50px"
+                    id="username"
+                    class="form-control"
+                    placeholder="Enter Username "
+                    required />
+                  <div class="icon">
+                    <i
+                      class="fa-solid fa-user-lock"
+                      style="position: absolute; top: 0px; left: 0px"></i>
+                  </div>
+                </div>
+              </div>
+              
+            <div class="card-text">
+              <label for="" class="form-label">Enter Password:</label>
+              <div class="" style="position: relative">
+                <input
+                  type="password"
+                  name="password"
+                  style="padding-left: 50px"
+                  id="password"
+                  class="form-control"
+                  placeholder="password "
+                  required />
+                <div class="icon">
+                  <i
+                    class="fa-solid fa-lock"
+                    style="position: absolute; top: 0px; left: 0px"></i>
+                </div>
+              </div>
+            </div>
 
-   
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-
- 
+            <div class="card-text">
+              <label for="" class="form-label">Confirm Password:</label>
+              <div style="position: relative">
+                <input
+                  type="password"
+                  name="password2"
+                  style="padding-left: 50px"
+                  id="password2"
+                  class="form-control"
+                  placeholder="password "
+                  required />
+                <div class="icon">
+                  <i
+                    class="fa-solid fa-lock"
+                    style="position: absolute; top: 0px; left: 0px"></i>
+                </div>
+              </div>
+            </div>
+            <div class="btn d-grid mt-3">
+              <button type="submit" value="Proceed" class="btn btn-primary">
+                Proceed
+                <div class="icon-btn">
+                  <i class="fa-solid fa-forward"></i>
+                </div>
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"></script>
   </body>
 
   <script>
-    $(document).ready(function() {
-        // Username validation
-        $('#username').change(function() {
-            $.ajax({
-                url: "{% url 'Usernamevalidation' %}",
-                data: { 'username': $('#username').val() },
-                dataType: 'json',
-                success: function(data) {
-                    if (data.is_taken) {
-                        swal("Error", "Username already registered!", "error");
-                    }
-                }
-            });
+    $(document).ready(function () {
+      // Username validation
+      $('#username').change(function () {
+        $.ajax({
+          url: "{% url 'Usernamevalidation' %}",
+          data: { username: $('#username').val() },
+          dataType: 'json',
+          success: function (data) {
+            if (data.is_taken) {
+              swal('Error', 'Username already registered!', 'error');
+            }
+          },
         });
+      });
 
-        // Phone validation
-        $('#phone').change(function() {
-            $.ajax({
-                url: "{% url 'phonevalid' %}",
-                data: { 'phone': $('#phone').val() },
-                dataType: 'json',
-                success: function(data) {
-                    if (data.is_taken) {
-                        swal("Error", "Phone number already registered!", "error");
-                    }
-                }
-            });
+      // Phone validation
+      $('#phone').change(function () {
+        $.ajax({
+          url: "{% url 'phonevalid' %}",
+          data: { phone: $('#phone').val() },
+          dataType: 'json',
+          success: function (data) {
+            if (data.is_taken) {
+              swal('Error', 'Phone number already registered!', 'error');
+            }
+          },
         });
+      });
 
-        // Email validation
-        $('#email').change(function() {
-            $.ajax({
-                url: "{% url 'emailvalid' %}",
-                data: { 'email': $('#email').val() },
-                dataType: 'json',
-                success: function(data) {
-                    if (data.is_taken) {
-                        swal("Error", "Email already registered!", "error");
-                    }
-                }
-            });
+      // Email validation
+      $('#email').change(function () {
+        $.ajax({
+          url: "{% url 'emailvalid' %}",
+          data: { email: $('#email').val() },
+          dataType: 'json',
+          success: function (data) {
+            if (data.is_taken) {
+              swal('Error', 'Email already registered!', 'error');
+            }
+          },
         });
+      });
 
-        // Form submission via AJAX
-        $("#registration-form").submit(function(e) {
-            e.preventDefault();
+      // Form submission via AJAX
+      $('#registration-form').submit(function (e) {
+        e.preventDefault();
 
-            $.ajax({
-                type: "POST",
-                url: "{% url 'register' %}",
-                data: $(this).serialize(),
-                headers: { "X-CSRFToken": $("input[name=csrfmiddlewaretoken]").val() },
-                success: function(response) {
-                    swal("Success", "Account created successfully!", "success")
-                        .then(() => window.location.href = "/login");
-                },
-                error: function(xhr) {
-                    swal("Error", xhr.responseJSON.message || "Something went wrong", "error");
-                }
-            });
+        $.ajax({
+          type: 'POST',
+          url: "{% url 'register' %}",
+          data: $(this).serialize(),
+          headers: {
+            'X-CSRFToken': $('input[name=csrfmiddlewaretoken]').val(),
+          },
+          success: function (response) {
+            swal('Success', 'Account created successfully!', 'success').then(
+              () => (window.location.href = '/reg/login')
+            );
+          },
+          error: function (xhr) {
+            swal(
+              'Error',
+              xhr.responseJSON.message || 'Something went wrong',
+              'error'
+            );
+          },
         });
+      });
     });
-</script>
-
+  </script>
 </html>
