--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -49,53 +49,99 @@
                       {% csrf_token %}
                       <h1>Login Portal</h1>
                        
-
-                        <div class="card-text">
-                            <label for="" class="form-label">Whatsapp Number:</label>
-                            <input type="number" minlength="10" maxlength="11"  name="phone" id="phone" class="form-control" placeholder="Enter Whatsapp No " required/>
-                            <div class="whatsapp"><i class="fa-brands fa-whatsapp"></i></div>
-
-                        </div>
-
-
-                       
-
-                        <div class="card-text">
-                          <label for="" class="form-label">Enter Password:</label>
-                          <input type="password" name="password" id="password" class="form-control" placeholder="password " required/>
-                          <div class="whatsapp"><i class="fa-brands fa-whatsapp"></i></div>
-
-                      </div>
-
-
-                     
-
-
-                      
-
-                        <div class="btn d-grid mt-3">
-                          <input type="submit" value="Proceed" class="btn btn-primary  ">
-                          <div class="icon-btn">
-                            <i class="fa-solid fa-forward"></i>
-                          </div>
-                        </div>
-                      
-                       
-
-
-                    </form>
-
+                      <div class="card-text">
+                <label for="" class="form-label">Whatsapp Number:</label>
+                <div class="" style="position: relative">
+                  <input
+                    type="tel"
+                    minlength="10"
+                    maxlength="11"
+                    name="phone"
+                    style="padding-left: 50px"
+                    id="phone"
+                    class="form-control"
+                    placeholder="Enter Whatsapp No "
+                    required />
+                  <div class="icon">
+                    <i
+                      class="fa-brands fa-whatsapp"
+                      style="position: absolute; top: 0px; left: 0px"></i>
                   </div>
                 </div>
+              </div>
+
+               <div class="card-text">
+              <label for="" class="form-label">Enter Password:</label>
+              <div class="" style="position: relative">
+                <input
+                  type="password"
+                  name="password"
+                  style="padding-left: 50px"
+                  id="password"
+                  class="form-control"
+                  placeholder="password "
+                  required />
+                <div class="icon">
+                  <i
+                    class="fa-solid fa-lock"
+                    style="position: absolute; top: 0px; left: 0px"></i>
+                </div>
+              </div>
+            </div>
+
+            <div class="btn d-grid mt-3">
+              <input type="submit" value="Proceed" class="btn btn-primary  ">
+                  <div class="icon-btn">
+                      <i class="fa-solid fa-forward"></i>
+                  </div>
+            </div>
+                      
+                       
 
 
-      
- 
-
+          </form>
+        </div>
+      </div>
    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
- 
+     <script>
+      $(document).ready(function() {
+          // Phone validation
+         // $('#phone').change(function() {
+              //$.ajax({
+                //  url: "{% url 'phonevalid' %}",
+                  //data: { 'phone': $('#phone').val() },
+                  //dataType: 'json',
+                  //success: function(data) {
+                    //  if (data.is_taken) {
+                      //    swal("Error", "Phone number not registered!", "error");
+                     // }
+                //  }
+            //  });
+          //});
+
+          // Login form submission via AJAX
+          $("#login-form").submit(function(e) {
+              e.preventDefault();
+              $.ajax({
+                  type: "POST",
+                  url: "{% url 'login' %}",
+                  data: $(this).serialize(),
+                  headers: { "X-CSRFToken": $("input[name=csrfmiddlewaretoken]").val() },
+                  success: function(response) {
+                      swal("Success", "Login successful!", "success")
+                          .then(() => window.location.href = "/dashboard");
+                  },
+                  error: function(xhr) {
+                      swal("Error", "Invalid phone number or password", "error");
+                  }
+              });
+          });
+      });
+    </script>
+
+
   </body>
 
   
